Fix social icons on small screens.

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ footer {
   }
   .social a {
     font-size: 2em;
-    padding: 1em;
+    padding: .5em;
   }
 }
 
